# HRAudioWizard_CPP

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  build.sh  run.sh  setup_deps.sh
src/: main.cpp
src/audio/: AudioIO.cpp  AudioIO.h  AudioProcessor.cpp  AudioProcessor.h  HFCompensation.cpp  HFCompensation.h  Resampler.cpp  Resampler.h
src/dsp/: FFT.cpp  FFT.h  STFT.cpp  STFT.h
src/gui/: FileDialog.cpp  FileDialog.h  MainWindow.cpp  MainWindow.h
